fixed issue with login panel not stretching to full size on locations pages or any where with the backheader component. Fixed Search component resizing issues, it should now be the same width as the rest of the other components above and below it.

--- a/frontend/src/components-css/BackHeader.css
+++ b/frontend/src/components-css/BackHeader.css
@@ -8,7 +8,6 @@
     background: #2c3e50;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
 }
 
 .back-button {
@@ -31,6 +30,8 @@
     width: auto;
     max-width: 100%;
     object-fit: contain;
+    display: flex;
+    justify-content: left;
 }
 
 .back-button:active {
